--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -25,26 +25,47 @@ cross_validation:
     method: 'leave_one_subject_out'
   user_identification:
     method: 'repeated_k_fold'
-    n_splits: 16
+    n_splits: 3
     n_repeats: 5
 
 # Feature Engineering Settings
 feature_engineering:
   feature_selection_method: 'none'   # Options: 'univariate', 'mutual_info', 'model', 'none'
   k_best: 10                               # Number of features to select
-  dimensionality_reduction_method: 'pca'   # Options: 'pca', 'none'
+  dimensionality_reduction_method: 'none'   # Options: 'pca', 'none'
   n_components: 5                          # Number of components to keep
 
 # Model settings
 models:
   - name: 'RandomForest'
     parameters:
-      n_estimators: [100, 200]
-      max_depth: [None, 10, 20]
+      n_estimators: [50, 100, 150, 200]
+      max_depth: [null, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
   - name: 'SVM'
     parameters:
-      C: [0.1, 1, 10]
+      C: [0.001, 0.1, 1, 10]
       kernel: ['linear', 'rbf']
+  - name: 'LogisticRegression'
+    parameters:
+      C: [0.001, 0.1, 1, 10]
+      penalty: ['l2']
+      solver: ['lbfgs']
+  - name: 'KNN'
+    parameters:
+      n_neighbors: [3, 5, 7, 9, 11, 13, 15]
+      weights: ['uniform', 'distance']
+  - name: 'DecisionTree'
+    parameters:
+      max_depth: [null, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
+      criterion: ['gini', 'entropy']
+  - name: 'NaiveBayes'
+    parameters:
+      var_smoothing: [0.00000000001, 0.0000000001, 0.000000001, 0.00000001, 0.0000001]
+  # - name: 'GradientBoosting'
+  #   parameters:
+  #     n_estimators: [100, 200]
+  #     learning_rate: [0.1, 0.05]
+  #     max_depth: [3, 5]
 
 # Other settings
 random_seed: 42
