--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -14,10 +14,11 @@ labels_columns: ['task', 'subject', 'trial']  # Column names for labels CSV
 # Preprocessing settings
 missing_value_strategy: 'mean'
 categorical_columns: []              # No categorical columns to encode in features
-scaling_method: 'standard'
+scaling_method: 'none'               # Options: 'standard', 'minmax', 'none'
 
 # Target variable settings
-target_variable: 'subject'              # Options: 'task', 'subject', 'trial'
+target_variable: 'subject'              # Options: 'task', 'subject'
+task_type: 'user_auth'               # New parameter: 'user_id', 'task_id', 'user_auth'
 
 # Cross-validation settings
 cross_validation:
@@ -27,6 +28,8 @@ cross_validation:
     method: 'repeated_k_fold'
     n_splits: 3
     n_repeats: 5
+  user_authentication:
+    method: 'custom'  # Custom method
 
 # Feature Engineering Settings
 feature_engineering:
@@ -37,35 +40,46 @@ feature_engineering:
 
 # Model settings
 models:
-  - name: 'RandomForest'
-    parameters:
-      n_estimators: [50, 100, 150, 200]
-      max_depth: [null, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
-  - name: 'SVM'
-    parameters:
-      C: [0.001, 0.1, 1, 10]
-      kernel: ['linear', 'rbf']
+  # - name: 'RandomForest'
+  #   parameters:
+  #     n_estimators: [50, 100, 150, 200]
+  #     max_depth: [null, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  # - name: 'SVM'
+  #   parameters:
+  #     C: [0.001, 0.1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  #     kernel: ['linear', 'rbf', 'sigmoid']
   - name: 'LogisticRegression'
     parameters:
-      C: [0.001, 0.1, 1, 10]
+      # C: [0.001, 0.1, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+      C: [10]
       penalty: ['l2']
       solver: ['lbfgs']
-  - name: 'KNN'
-    parameters:
-      n_neighbors: [3, 5, 7, 9, 11, 13, 15]
-      weights: ['uniform', 'distance']
-  - name: 'DecisionTree'
-    parameters:
-      max_depth: [null, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
-      criterion: ['gini', 'entropy']
-  - name: 'NaiveBayes'
-    parameters:
-      var_smoothing: [0.00000000001, 0.0000000001, 0.000000001, 0.00000001, 0.0000001]
+  # - name: 'KNN'
+  #   parameters:
+  #     n_neighbors: [1, 3, 5, 7, 9, 11, 13, 15]
+  #     weights: ['uniform', 'distance']
+  # - name: 'DecisionTree'
+  #   parameters:
+  #     max_depth: [null, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  #     criterion: ['gini', 'entropy', 'log_loss']
+  # - name: 'NaiveBayes'
+  #   parameters:
+  #     var_smoothing: [0.00000000001, 0.0000000001, 0.000000001, 0.00000001, 0.0000001]
   # - name: 'GradientBoosting'
   #   parameters:
-  #     n_estimators: [100, 200]
-  #     learning_rate: [0.1, 0.05]
-  #     max_depth: [3, 5]
+  #     n_estimators: [50, 100, 150, 200]
+  #     learning_rate: [0.1, 0.05, 0.01, 0.005, 0.0001]
+  #     max_depth: [null, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  # - name: 'XGBoost'
+  #   parameters:
+  #     n_estimators: [50, 100, 150, 200]
+  #     learning_rate: [0.1, 0.05, 0.01, 0.005, 0.0001]
+  #     max_depth: [null, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+  # - name: 'lightgbm'
+  #   parameters:
+  #     n_estimators: [50, 100, 150, 200]
+  #     learning_rate: [0.1, 0.05, 0.01, 0.005, 0.0001]
+  #     max_depth: [null, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
 # Other settings
 random_seed: 42
